# pd-l1-drug-accelerator

./: .gitignore  LICENSE  Makefile  README.md  clean_pdb.py  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Avance1_Equipo#02.ipynb  Avance2_Equipo#02.ipynb
outputs/03_alphafold_inputs/: af3_upload_PART_10_20260202_1844.json  af3_upload_PART_1_20260202_1844.json  af3_upload_PART_2_20260202_1844.json  af3_upload_PART_3_20260202_1844.json  af3_upload_PART_4_20260202_1844.json  af3_upload_PART_5_20260202_1844.json  af3_upload_PART_6_20260202_1844.json  af3_upload_PART_7_20260202_1844.json  af3_upload_PART_8_20260202_1844.json  af3_upload_PART_9_20260202_1844.json  target_mpnn_20260130_154151_1.fasta  target_mpnn_20260130_154151_10.fasta  target_mpnn_20260130_154151_2.fasta  target_mpnn_20260130_154151_3.fasta  target_mpnn_20260130_154151_4.fasta  target_mpnn_20260130_154151_5.fasta  target_mpnn_20260130_154151_6.fasta  target_mpnn_20260130_154151_7.fasta  target_mpnn_20260130_154151_8.fasta  target_mpnn_20260130_154151_9.fasta  (+2 more)
pd-l1-drug-accelerator/: __init__.py  dataset.py  features.py  plots.py
scripts/: README_script.txt  env_config.sh  posible_alphafold_total.py  prepare_af3_json.py  readme_script.txt  run_00_setup_env.py  run_01_nvidia_api.py  run_01_rfdiffusion.sh  run_01_rfdiffusion_pure.py  run_02_mpnn.sh  run_02_mpnn_local_v2.py  run_03_alphafold_pipeline.py  run_03_alphafold_pipeline_local.py  run_nvidia_api.py  update_database.py
src/: alphafold3_predictor.py  protein_mpnn_generator.py  rf_diffusion_generator.py
(+11 files in other folders)
