[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pd-l1-drug-accelerator"
version = "0.0.1"
description = "A drug accelerator with ML"
authors = [
  { name = "DreamTeam" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["pd-l1-drug-accelerator"]
include = ["pyproject.toml", "pd-l1-drug-accelerator/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["pd-l1-drug-accelerator"]
force-sort-within-sections = true

